compiler-core/src/parse/snapshots/gleam_core__parse__tests__return_outside_function_context_module_level.snap
---
source: compiler-core/src/parse/tests.rs
expression: $return 42
---
----- SOURCE CODE
$return 42

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ $return 42
  │ ^^^^^^^ I was not expecting this

Found the keyword `$return`, expected one of: 
- An import, const, type, or function.
